# SDL-1.2_cmake

./: CMakeLists.txt
